2011-01-22 Matthias Scholz <ms@jammerhund.de>
	* small GUI fix in FontChooser, now the example text is better visible
	* AdvancedMeasureTool enhancement:
		If the user starts a measurement with a single click, all the old
		measurements will be deleted. But if the user starts the measurement
		with a double click, then nothing is deleted. So you can make multiple
		measurements very easy without any additional menuitems and mouseclicks
		in the menu.

2011-01-19 Matthias Scholz <ms@jammerhund.de>
	* AdvancedMeasureOptionsPanel
		* Bugfix: if you have the cancel button pressed in the FontChooser, then
			an exception was thrown, because of a null-Font
	* MeasurementStyle
		* format pattern for area/length is now adaptive; thaks to Michaël for his idea
	* AdvancedMeasureOptionsPanel, MeasurementStyle, MeasureLayerFinder
		* now you can select individually if summary length and/or area should
			be painted; thanks to Jukka Rahkonen for his idea
	* AdvancedMeasureTool
		* now you can pan and zoom during measurment
	* CoordinateListMetrics
		* now you can get the distance for a closed geometry
		* this was the reason for different distance in the statusbar and while
			area measurement mode in the AdvancedMeasureTool

2011-01-16 Matthias Scholz <ms@jammerhund.de>
	* MeasureLayerFinder.featuresChanged()
		* Bugfix: the LayerListener now only works if the change was on
			the measureLayer; all changes on other layers will be ignored

2011-01-16 Matthias Scholz <ms@jammerhund.de>
	* AdvancedMeasurePlugin
		* styling for the AdvancedMeasureTool in the Option dialog added
		* I18N for english and german

2011-01-03 Matthias Scholz <ms@jammerhund.de>
	* com.vividsolutions.jump.workbench.ui.FontChooser
		* sample text i18n -> ui.FontChooser.sampletext
		* possibilty to set the font size in the dialog introduced
			* The GUI code was already present in jbinit(), but the components
			  was not finaly added to the dialog.